Complete English documentation translation and version updates