@@ -8,7 +8,7 @@ import solid.humank.genaidemo.domain.common.annotations.ValueObject;
 public record ShoppingCartId(String value) {
 
     public ShoppingCartId {
-        if (value == null || value.trim().isEmpty()) {
+        if (value == null || value.isBlank()) {
             throw new IllegalArgumentException("購物車ID不能為空");
         }
     }
