@@ -1,12 +1,13 @@
 package solid.humank.genaidemo.exceptions;
 
+import java.util.Collections;
 import java.util.List;
 
 public class ValidationException extends RuntimeException {
     private final List<String> errors;
 
     public ValidationException(String message) {
-        this(List.of(message));
+        this(Collections.singletonList(message));
     }
 
     public ValidationException(List<String> errors) {
