@@ -3,7 +3,6 @@ package solid.humank.genaidemo.infrastructure.promotion.persistence.adapter;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -40,7 +39,7 @@ public class VoucherRepositoryAdapter
         return jpaVoucherRepository.findByOwnerId(customerId)
                 .stream()
                 .map(mapper::toDomainModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -48,7 +47,7 @@ public class VoucherRepositoryAdapter
         return jpaVoucherRepository.findByExpiresAtAfterAndStatus(expirationDate, "ACTIVE")
                 .stream()
                 .map(mapper::toDomainModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
